Updated model for file upload

--- a/assets/apps/templates/home.html
+++ b/assets/apps/templates/home.html
@@ -5,6 +5,6 @@
 
 <div>
     <ul ng-repeat="file in data">
-        <a href="{{ file.file }}" download>{{ file.name }}</a>
+        <a href="{{ file.uploaded_file }}" download>{{ file.name }}</a>
     </ul>
 </div>
