--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
     <script src="{% static 'node_modules/angular/angular.min.js' %}"></script>
     <script src="{% static 'node_modules/angular-ui-router/release/angular-ui-router.min.js' %}"></script>
     <script src="{% static 'node_modules/ng-file-upload/dist/ng-file-upload-all.js' %}"></script>
+    <script src="{% static 'node_modules/clipboard/dist/clipboard.js' %}"></script>
+    <script src="{% static 'node_modules/ngclipboard/dist/ngclipboard.js' %}"></script>
 
     <script src="{% static 'apps/app.js' %}"></script>
     {% if user.is_authenticated %}
