--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
 
-<body ng-app="core">
+<body ng-app="box">
     <ui-view></ui-view>
 
     {# ANGULAR SCRIPTS #}
